load-test/scaling-annotations-route.yaml
apiVersion: serving.knative.dev/v1alpha1
kind: Route
metadata:
  name: scaling-annotations
spec:
  traffic:
  - name: v1
    revisionName: scaling-annotations-00001
    percent: 100
